written integration test cases for all services